# libBigWig

./: .gitignore  CMakeLists.txt  conanfile.py
cmake/: CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  StandardProjectSettings.cmake
include/libBigWig/: bigWigIO.h  bwCommon.h  bwValues.h
src/: CMakeLists.txt  bwRead.c  bwStats.c  bwValues.c  bwWrite.c  io.c
src/include/libBigWig/: bigWig.h
test/: CMakeLists.txt  exampleWrite.c  test.py  testBigBed.c  testIterator.c  testLocal.c  testRemote.c  testRemoteManyContigs.c  testWrite.c
